# electric-bikes-routes-simulation

./: README.md  docker-compose.yml  package-lock.json
Modelos de Simulación/Modelo de ubicación de estaciones de carga/: calculate_coverage_all_territories.py  extract_cluster_info.py  extract_stations_info.py  real_path_simulation.py  run_extraction_for_territories.py
Modelos de Simulación/Simulación de gastos de mocoticletas eléctricas/: README.md  ZONAS SIT.qix  calcular_costo_viaje_aleatorio.py  viajes_motos_procesados.csv
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/src/: App.jsx  index.css
consumption-model/: ModeloMoto1.py  Modelo_moto.py  README.md  agentBasedModel.py  bike_model_segment.py  exm1.json  import pickle.py  modelo_moto(1).txt  pyproject.toml  run_model.ipynb  rutas.html
methods/: api.ipynb  clean.ipynb  mapa.html  petitions.py  ruta.html
methods/geojson/: amva.geojson  bog_ofi1.geojson  medellin.geojson  medellin1.geojson
methods/results/: amva.json  bog.json  med.json
methods/routes/: azure_opt1.json  azure_opt2.geojson  ors_map.html  traffic.json
modelos/Modelo de ubicación de estaciones de carga/: DBSCAN_Clustering.py  generate_stations_map.py  (+1 more)
multi-routes-ors/: README.md  mac_setup_and_run.sh  package-lock.json
server/: .gitignore  Dockerfile  consume.py  consume1.py  main.py  main11.py  moto.py  ors_routes.py  petitions.py  requirements.txt  telemetry_exporter.py  utils.py
simulacion_costos_motocicletas_electricas/: INSTALAR.bat  README.md  requirements.txt  verificar_instalacion.py
(+166 files in other folders)
