[project]
name = "hybridbikeconsumptionmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentpy>=0.1.5",
    "folium>=0.19.6",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "mesa>=3.2.0",
    "numpy>=2.2.6",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
